fix: fixed bug with too big font size on some phones (#307)

--- a/src/index.css
+++ b/src/index.css
@@ -317,3 +317,8 @@ body::-webkit-scrollbar:horizontal {
 body::-webkit-scrollbar-vertical {
   display: block;
 }
+
+/*28.11.2034  fix bug when font size doesn't applies properly on iPhone 13 pro max */
+body {
+  -webkit-text-size-adjust: 100%;
+}
